alignment fixes for follow up

--- a/src/app/dashboard/visit-summary/visit-summary.component.scss
+++ b/src/app/dashboard/visit-summary/visit-summary.component.scss
@@ -501,6 +501,7 @@ textarea.form-control {
 .ng-select.visit-select.custom.ng-select-multiple .ng-select-container {
   background: #FFFFFF;
   min-width: 120px;
+  padding: 6px;
 }
 
 ::ng-deep .ng-select.visit-select.ng-select-single .ng-select-container,
